--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,24 @@
 body {
-  color: aqua;
+  color: black;
+  font-family: Roboto;
+}
+
+.sub-heading {
+  background-color: gray;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  background-color: aqua;
+  text-align: center;
+}
+
+.nav h4 {
+  color: white;
+  border: 2px solid black;
+  border-radius: 20px;
+  width: 200px;
+  align-self: center;
+  padding: 10px;
 }/*# sourceMappingURL=main.css.map */
