Adding media query

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,4 @@
+@media (max-width: 768px){
 body{
     color: black;
     font-family: Roboto;
@@ -50,4 +51,5 @@ body{
 .rest-detail{
     padding: 5%;
     padding-top: 0%;
+}
 }
