--- a/styles/main.css
+++ b/styles/main.css
@@ -1,60 +1,55 @@
-body {
-  color: black;
-  font-family: Roboto;
-}
-
-.sub-heading {
-  background-color: gray;
-}
-
-.nav {
-  display: flex;
-  flex-direction: column;
-  background-color: aqua;
-  text-align: center;
-}
-
-.nav h4 {
-  color: white;
-  border: 2px solid black;
-  border-radius: 20px;
-  width: 200px;
-  align-self: center;
-  padding: 10px;
-}
-
-.Restaurants {
-  background-color: #f2f2f2;
-  margin-left: 25px;
-  padding: 3%;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  border-radius: 10px;
-  width: 70%;
-  flex: 1;
-}
-
-.rest-col {
-  width: 70%;
-  height: 250px;
-  background-color: white;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  margin-bottom: 3%;
-  align-items: flex-end;
-}
-
-.rest-col img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 50%;
-  width: 100%;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
-}
-
-.rest-detail {
-  padding: 5%;
-  padding-top: 0%;
+@media (max-width: 768px) {
+  body {
+    color: black;
+    font-family: Roboto;
+  }
+  .sub-heading {
+    background-color: gray;
+  }
+  .nav {
+    display: flex;
+    flex-direction: column;
+    background-color: aqua;
+    text-align: center;
+  }
+  .nav h4 {
+    color: white;
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 200px;
+    align-self: center;
+    padding: 10px;
+  }
+  .Restaurants {
+    background-color: #f2f2f2;
+    margin-left: 25px;
+    padding: 3%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border-radius: 10px;
+    width: 70%;
+    flex: 1;
+  }
+  .rest-col {
+    width: 70%;
+    height: 250px;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
+    align-items: flex-end;
+  }
+  .rest-col img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: 50%;
+    width: 100%;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+  }
+  .rest-detail {
+    padding: 5%;
+    padding-top: 0%;
+  }
 }/*# sourceMappingURL=main.css.map */
