--- a/styles/main.css
+++ b/styles/main.css
@@ -2,37 +2,114 @@
   body {
     color: black;
     font-family: Roboto;
+    margin: 0;
   }
   .sub-heading {
-    background-color: gray;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    background-color: #f2f2f2;
+  }
+  .top {
+    display: flex;
+    justify-content: center;
+  }
+  #logo {
+    padding-top: 20px;
+    width: 200px;
+  }
+  #logo-2 {
+    width: 100px;
+  }
+  .row img {
+    color: white;
   }
   .nav {
     display: flex;
     flex-direction: column;
+    width: 100%;
     background-color: aqua;
     text-align: center;
   }
-  .nav h4 {
-    color: white;
+  .How-it-works {
+    display: flex;
+    flex-direction: column;
+    background-color: pink;
+  }
+  .How-it-works h2 {
+    padding-left: 20px;
+  }
+  .nav-2 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+  }
+  .nav-2 h4 {
+    margin-top: 15px;
+  }
+  .circle {
+    background-color: purple;
     border: 2px solid black;
-    border-radius: 20px;
-    width: 200px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
     align-self: center;
-    padding: 10px;
+    position: absolute;
+    left: 25px;
+  }
+  .bubble-1 {
+    display: flex;
+    width: 280px;
+    height: 50px;
+    border-radius: 20px;
+    border: 2px solid black;
+    padding-left: 20px;
+    background-color: #f2f2f2;
+  }
+  .bubble-2 {
+    display: flex;
+    width: 280px;
+    height: 50px;
+    border-radius: 20px;
+    border: 2px solid black;
+    padding-left: 20px;
+    background-color: #f2f2f2;
+  }
+  .bubble-3 {
+    display: flex;
+    width: 280px;
+    height: 50px;
+    border-radius: 20px;
+    border: 2px solid black;
+    padding-left: 20px;
+    background-color: #f2f2f2;
+  }
+  .fa-mobile-screen-button {
+    align-self: center;
+    margin-right: 10px;
+  }
+  .fa-list {
+    align-self: center;
+    margin-right: 10px;
+  }
+  .fa-store {
+    align-self: center;
+    margin-right: 10px;
   }
   .Restaurants {
     background-color: #f2f2f2;
-    margin-left: 25px;
     padding: 3%;
     padding-top: 2%;
     padding-bottom: 2%;
-    border-radius: 10px;
-    width: 70%;
+    width: 94%;
     flex: 1;
   }
   .rest-col {
-    width: 70%;
+    width: 95%;
     height: 250px;
+    margin-left: 8px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -43,7 +120,7 @@
   .rest-col img {
     -o-object-fit: cover;
        object-fit: cover;
-    height: 50%;
+    height: 65%;
     width: 100%;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
@@ -51,5 +128,16 @@
   .rest-detail {
     padding: 5%;
     padding-top: 0%;
+    padding-bottom: 0px;
+    line-height: 5px;
+  }
+  .foot {
+    color: white;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    width: 89%;
+    padding: 20px;
+    margin-top: 20px;
   }
 }/*# sourceMappingURL=main.css.map */
