--- a/styles/main.css
+++ b/styles/main.css
@@ -8,11 +8,23 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    background-color: #f2f2f2;
+    background-color: rgba(231, 230, 230, 0.74);
   }
-  .top {
-    display: flex;
-    justify-content: center;
+  .purple {
+    background: linear-gradient(#FF79DA, #9356DC);
+    border-radius: 20px;
+    border-top: #FF79DA;
+    border-bottom: #9356DC;
+    border-left: #FF79DA;
+    border-right: #9356DC;
+    width: 200px;
+    height: 40px;
+    align-self: center;
+    margin-bottom: 50px;
+  }
+  .purple a {
+    color: white;
+    text-decoration: none;
   }
   #logo {
     padding-top: 20px;
@@ -28,13 +40,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: aqua;
+    background-color: #f6f6f6;
     text-align: center;
   }
   .How-it-works {
     display: flex;
     flex-direction: column;
-    background-color: pink;
+    background-color: white;
   }
   .How-it-works h2 {
     padding-left: 20px;
@@ -50,8 +62,9 @@
     margin-top: 15px;
   }
   .circle {
-    background-color: purple;
-    border: 2px solid black;
+    color: white;
+    background-color: #9356DC;
+    border: 2px solid #9356DC;
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -64,27 +77,33 @@
     width: 280px;
     height: 50px;
     border-radius: 20px;
-    border: 2px solid black;
     padding-left: 20px;
     background-color: #f2f2f2;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
   }
   .bubble-2 {
     display: flex;
     width: 280px;
     height: 50px;
     border-radius: 20px;
-    border: 2px solid black;
     padding-left: 20px;
     background-color: #f2f2f2;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
   }
   .bubble-3 {
     display: flex;
     width: 280px;
     height: 50px;
     border-radius: 20px;
-    border: 2px solid black;
     padding-left: 20px;
     background-color: #f2f2f2;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
   }
   .fa-mobile-screen-button {
     align-self: center;
@@ -131,6 +150,10 @@
     padding-bottom: 0px;
     line-height: 5px;
   }
+  .rest-col a {
+    text-decoration: none;
+    color: black;
+  }
   .foot {
     color: white;
     background-color: black;
@@ -138,6 +161,157 @@
     flex-direction: column;
     width: 89%;
     padding: 20px;
-    margin-top: 20px;
+  }
+  body {
+    animation-name: loadinganimation;
+    animation-duration: 0.8s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+  }
+  .top {
+    display: flex;
+    justify-content: center;
+  }
+  .top a {
+    text-decoration: none;
+    color: black;
+    align-self: center;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+  }
+  .fa-arrow-left {
+    color: black;
+    font-size: x-large;
+  }
+  .background {
+    display: flex;
+    flex-direction: column;
+    background-color: #f6f6f6;
+  }
+  #image {
+    width: 100%;
+  }
+  .menu-title h3 {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+  .menu-image img {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .The-full-palette {
+    display: flex;
+    flex-direction: column;
+    background-color: #f6f6f6;
+    border-radius: 30px;
+    position: relative;
+    top: -40px;
+  }
+  .The-full-palette h2 {
+    padding-left: 20px;
+  }
+  .nav-3 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background-color: #f6f6f6;
+  }
+  .nav-3 h4 {
+    margin-top: 15px;
+  }
+  .nav-4 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background-color: #f6f6f6;
+  }
+  .nav-4 h4 {
+    margin-top: 15px;
+  }
+  .nav-5 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background-color: #f6f6f6;
+  }
+  .nav-5 h4 {
+    margin-top: 15px;
+  }
+  .food-1 {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 55px;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
+    padding-left: 12px;
+    padding-top: 18px;
+    line-height: 10px;
+  }
+  .food-1 h4 {
+    margin: 0px;
+  }
+  .food-1 li {
+    list-style: none;
+    align-self: flex-end;
+    position: relative;
+    left: -20px;
+    top: -25px;
+  }
+  .food-2 {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 55px;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
+    padding-left: 12px;
+    padding-top: 18px;
+    line-height: 10px;
+  }
+  .food-2 h4 {
+    margin: 0px;
+  }
+  .food-2 li {
+    list-style: none;
+    align-self: flex-end;
+    position: relative;
+    left: -20px;
+    top: -25px;
+  }
+  .food-3 {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 55px;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
+    padding-left: 12px;
+    padding-top: 18px;
+    line-height: 10px;
+  }
+  .food-3 h4 {
+    margin: 0px;
+  }
+  .food-3 li {
+    list-style: none;
+    align-self: flex-end;
+    position: relative;
+    left: -20px;
+    top: -25px;
   }
 }/*# sourceMappingURL=main.css.map */
