--- a/styles/main.css
+++ b/styles/main.css
@@ -117,6 +117,13 @@
     align-self: center;
     margin-right: 10px;
   }
+  .heart {
+    background-color: aqua;
+  }
+  svg {
+    color: red;
+    fill: rebeccapurple;
+  }
   .Restaurants {
     background-color: #f2f2f2;
     padding: 3%;
@@ -193,15 +200,21 @@
   #image {
     width: 100%;
   }
+  #image-2 {
+    width: 100%;
+    height: 250px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
   .menu-title h3 {
     margin-left: 20px;
     font-weight: normal;
   }
-  .menu-image img {
+  .background-image img {
     -o-object-fit: cover;
        object-fit: cover;
   }
-  .The-full-palette {
+  .restaurant-name {
     display: flex;
     flex-direction: column;
     background-color: #f6f6f6;
@@ -209,7 +222,7 @@
     position: relative;
     top: -40px;
   }
-  .The-full-palette h2 {
+  .restaurant-name h2 {
     padding-left: 20px;
   }
   .nav-3 {
@@ -308,6 +321,30 @@
     margin: 0px;
   }
   .food-3 li {
+    list-style: none;
+    align-self: flex-end;
+    position: relative;
+    left: -20px;
+    top: -25px;
+  }
+  .food-4 {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 55px;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
+    padding-left: 12px;
+    padding-top: 18px;
+    line-height: 10px;
+  }
+  .food-4 h4 {
+    margin: 0px;
+  }
+  .food-4 li {
     list-style: none;
     align-self: flex-end;
     position: relative;
