--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,10 +1,45 @@
-@media (max-width: 768px) {
-    body {
-        color: black;
-        font-family: Roboto;
-        margin: 0;
+body {
+    color: black;
+    font-family: Roboto;
+    margin: 0;
+    // width: 92%;
+    // margin: 0 4%;
+    // border: 1px solid #99e2d0;
+    // border-radius: 20px;
+    // margin-top: 1%;
+    // border: none;
+    // width: 92%;
+    animation-duration: 0.7s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-name: loadAnimation;
+}
+@keyframes rotate {
+    0% {
+      transform: rotate(0);
     }
-
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes move {
+    to {
+      z-index: -1;
+      opacity: 0;
+    }
+  }
+@keyframes loadAnimation {
+0% {
+transform: translateY(-100px);
+opacity: 0;
+}
+100% {
+transform: translateY(0);
+opacity: 1;
+}
+}
+@media (max-width: 768px) {
     .sub-heading {
         display: flex;
         width: 100%;
@@ -141,12 +176,28 @@
     }
 
     .heart {
-        background-color: aqua;
+        fill: url(#Gradient-1);
+
     }
-    svg{
-        color: red;
-        fill: rebeccapurple;
+
+    // svg{
+    //     color: red;
+    //     fill: rebeccapurple;
+    // }
+
+    .stop-1 {
+        stop-color: purple;
     }
+
+    .stop-2 {
+        stop-color: pink;
+        stop-opacity: 0;
+    }
+
+    .stop-3 {
+        stop-color: blue;
+    }
+
 
     .Restaurants {
         background-color: #f2f2f2;
@@ -200,13 +251,14 @@
     }
 
     // Menu 1
-    body {
-        animation-name: loadinganimation;
-        animation-duration: .8s;
-        animation-iteration-count: 1;
-        animation-timing-function: ease-in-out;
-        animation-delay: 0s;
-    }
+    // body {
+    //     animation-name: loadinganimation;
+    //     animation-duration: .8s;
+    //     animation-iteration-count: 1;
+    //     animation-timing-function: ease-in-out;
+    //     animation-delay: 0s;
+
+    // }
 
     .top {
         display: flex;
@@ -304,31 +356,105 @@
     }
 
     .food-1 {
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-        height: 55px;
-        border-radius: 20px;
-        background-color: white;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        transition: 0.3s;
-        margin-bottom: 3%;
+        // display: flex;
+        // // flex-direction: column;
+        // width: 90%;
+        // height: 55px;
+        // border-radius: 20px;
+        // background-color: white;
+        // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        // transition: 0.3s;
+        // margin-bottom: 3%;
+        // padding-left: 12px;
+        // padding-top: 18px;
+        // align-items: center;
+
+        box-sizing: border-box;
+        height: 100px;
+        // width: 90%;
         padding-left: 12px;
-        padding-top: 18px;
-        line-height: 10px;
+        border-radius: 15px;
+        background-color: white;
+        box-shadow: 0px 5px 10px #C0C0C0;
+        align-items: center;
+        display: flex;
+        padding-left: 1.5em;
+        cursor: pointer;
+        list-style: none;
+        font-family: "Roboto", sans-serif;
+        margin-bottom: 2%;
+        animation-duration: 1s;
+        animation-timing-function: ease-in-out;
+        animation-delay: 0s;
+        animation-iteration-count: 1;
+        animation-name:loadAnimation;
+           
     }
 
     .food-1 h4 {
         margin: 0px;
     }
 
-    .food-1 li {
-        list-style: none;
-        align-self: flex-end;
-        position: relative;
-        left: -20px;
-        top: -25px;
+    // .food-1 li {
+    //     list-style: none;
+    // }
+
+    // .money {
+    // display: inline;
+    // list-style: none;
+    // text-align: center;
+    // color: red;
+    // background-color: aqua;
+    // list-style: none;
+    // align-self: flex-end;
+    // position: relative;
+    // left: -30px;
+    // top: -65px;
+    // }
+    // .price {
+    //     display: flex;
+    // }
+
+    // .price 
+    .check {
+        width: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // max-width: 0px;
+        height: 100%;
+        // color: transparent;
+        background-color: #99e2d0;
+        transition: all 0.1s;
     }
+
+    .check p:nth-child(2) i {
+        font-size: 1.5em;
+    }
+
+    .check:hover {
+        max-width: 100px;
+        color: white;
+        border-radius: 0 15px 15px 0px;
+    }
+
+    .check:hover>p {
+        animation: rotate 360;
+        animation: spin 0.4s;
+        transform: rotateZ(360deg);
+        transition: 1s;
+    }
+
+    // .food-1:hover+.money {
+    //     display: inline;
+    //     list-style: none;
+    //     text-align: center;
+    //     color: red;
+    //     background-color: aqua;
+    // }
+    // .fa-circle-check {
+    //     font-size: xx-large;
+    // }
 
     .food-2 {
         display: flex;
@@ -411,3 +537,10 @@
         top: -25px;
     }
 }
+
+@media screen and (max-width: 992px) and (min-width: 768px) {
+
+
+}
+
+@media screen and (min-width: 992px) {}
