--- a/styles/main.css
+++ b/styles/main.css
@@ -2,11 +2,6 @@ body {
   color: black;
   font-family: Roboto;
   margin: 0;
-  animation-duration: 0.7s;
-  animation-timing-function: ease-in-out;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-name: loadAnimation;
 }
 
 @keyframes rotate {
@@ -178,6 +173,7 @@ body {
     transition: 0.3s;
     margin-bottom: 3%;
     align-items: flex-end;
+    position: relative;
   }
   .rest-col img {
     -o-object-fit: cover;
@@ -307,7 +303,10 @@ body {
   .food-1 h4 {
     margin: 0px;
   }
-  .check {
+  .food-1 .check > p > i {
+    display: none;
+  }
+  .food-1 .check:hover {
     width: 70px;
     display: flex;
     justify-content: center;
@@ -315,16 +314,16 @@ body {
     height: 100%;
     background-color: #99e2d0;
     transition: all 0.1s;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
   }
-  .check p:nth-child(2) i {
-    font-size: 1.5em;
-  }
-  .check:hover {
+  .food-1 p:hover {
     max-width: 100px;
     color: white;
     border-radius: 0 15px 15px 0px;
   }
-  .check:hover > p {
+  .food-1:hover > .check i {
+    display: block;
     animation: rotate 360;
     animation: spin 0.4s;
     transform: rotateZ(360deg);
@@ -401,5 +400,22 @@ body {
     position: relative;
     left: -20px;
     top: -25px;
+  }
+  .new {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    margin-top: 4px;
+    margin-left: 250px;
+    margin-bottom: 0px;
+    color: white;
+    background-color: #99e2d0;
+    position: absolute;
+  }
+}
+@media screen and (min-width: 992px) {
+  footer {
+    width: 100%;
   }
 }/*# sourceMappingURL=main.css.map */
