--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,11 @@ body {
   color: black;
   font-family: Roboto;
   margin: 0;
+  animation-duration: 0.7s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
 }
 
 @keyframes rotate {
@@ -29,13 +34,28 @@ body {
   }
 }
 @media (min-width: 320px) {
-  .sub-heading {
+  .top {
+    display: flex;
+    justify-content: center;
+  }
+  .top #logo {
+    padding-top: 20px;
+    width: 200px;
+  }
+  nav .menu .sub-heading {
     display: flex;
     width: 100%;
     justify-content: center;
     background-color: rgba(231, 230, 230, 0.74);
   }
-  .purple {
+  nav .nav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: #f6f6f6;
+    text-align: center;
+  }
+  nav .nav .purple {
     background: linear-gradient(#FF79DA, #9356DC);
     border-radius: 20px;
     border-top: #FF79DA;
@@ -47,46 +67,37 @@ body {
     align-self: center;
     margin-bottom: 50px;
   }
-  .purple a {
+  nav .nav .purple a {
     color: white;
     text-decoration: none;
   }
-  #logo {
-    padding-top: 20px;
-    width: 200px;
-  }
-  #logo-2 {
-    width: 100px;
-  }
-  .row img {
-    color: white;
-  }
-  .nav {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background-color: #f6f6f6;
-    text-align: center;
-  }
-  .How-it-works {
+  main .How-it-works {
     display: flex;
     flex-direction: column;
     background-color: white;
   }
-  .How-it-works h2 {
+  main .How-it-works h2 {
     padding-left: 20px;
   }
-  .nav-2 {
+  main .How-it-works .nav-2 {
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
     text-align: center;
   }
-  .nav-2 h4 {
-    margin-top: 15px;
+  main .How-it-works .nav-2 .bubble-1 {
+    display: flex;
+    width: 280px;
+    height: 50px;
+    border-radius: 20px;
+    padding-left: 20px;
+    background-color: #f2f2f2;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-bottom: 3%;
   }
-  .circle {
+  main .How-it-works .nav-2 .bubble-1 .circle {
     color: white;
     background-color: #9356DC;
     border: 2px solid #9356DC;
@@ -97,7 +108,14 @@ body {
     position: absolute;
     left: 25px;
   }
-  .bubble-1 {
+  main .How-it-works .nav-2 .bubble-1 .fa-mobile-screen-button {
+    align-self: center;
+    margin-right: 10px;
+  }
+  main .How-it-works .nav-2 .bubble-1 h4 {
+    margin-top: 15px;
+  }
+  main .How-it-works .nav-2 .bubble-2 {
     display: flex;
     width: 280px;
     height: 50px;
@@ -108,7 +126,25 @@ body {
     transition: 0.3s;
     margin-bottom: 3%;
   }
-  .bubble-2 {
+  main .How-it-works .nav-2 .bubble-2 .circle {
+    color: white;
+    background-color: #9356DC;
+    border: 2px solid #9356DC;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    align-self: center;
+    position: absolute;
+    left: 25px;
+  }
+  main .How-it-works .nav-2 .bubble-2 .fa-list {
+    align-self: center;
+    margin-right: 10px;
+  }
+  main .How-it-works .nav-2 .bubble-2 h4 {
+    margin-top: 15px;
+  }
+  main .How-it-works .nav-2 .bubble-3 {
     display: flex;
     width: 280px;
     height: 50px;
@@ -119,41 +155,23 @@ body {
     transition: 0.3s;
     margin-bottom: 3%;
   }
-  .bubble-3 {
-    display: flex;
-    width: 280px;
-    height: 50px;
-    border-radius: 20px;
-    padding-left: 20px;
-    background-color: #f2f2f2;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
+  main .How-it-works .nav-2 .bubble-3 .circle {
+    color: white;
+    background-color: #9356DC;
+    border: 2px solid #9356DC;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    align-self: center;
+    position: absolute;
+    left: 25px;
   }
-  .fa-mobile-screen-button {
+  main .How-it-works .nav-2 .bubble-3 .fa-store {
     align-self: center;
     margin-right: 10px;
   }
-  .fa-list {
-    align-self: center;
-    margin-right: 10px;
-  }
-  .fa-store {
-    align-self: center;
-    margin-right: 10px;
-  }
-  .heart {
-    fill: url(#Gradient-1);
-  }
-  .stop-1 {
-    stop-color: purple;
-  }
-  .stop-2 {
-    stop-color: pink;
-    stop-opacity: 0;
-  }
-  .stop-3 {
-    stop-color: blue;
+  main .How-it-works .nav-2 .bubble-3 h4 {
+    margin-top: 15px;
   }
   .Restaurants {
     background-color: #f2f2f2;
@@ -163,7 +181,7 @@ body {
     width: 94%;
     flex: 1;
   }
-  .rest-col {
+  .Restaurants .rest-col {
     width: 95%;
     height: 250px;
     margin-left: 8px;
@@ -175,7 +193,23 @@ body {
     align-items: flex-end;
     position: relative;
   }
-  .rest-col img {
+  .Restaurants .rest-col a {
+    text-decoration: none;
+    color: black;
+  }
+  .Restaurants .rest-col a .new {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    margin-top: 4px;
+    margin-left: 250px;
+    margin-bottom: 0px;
+    color: white;
+    background-color: #99e2d0;
+    position: absolute;
+  }
+  .Restaurants .rest-col img {
     -o-object-fit: cover;
        object-fit: cover;
     height: 65%;
@@ -183,107 +217,66 @@ body {
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
   }
-  .rest-detail {
+  .Restaurants .rest-col .rest-detail {
     padding: 5%;
     padding-top: 0%;
     padding-bottom: 0px;
     line-height: 5px;
   }
-  .rest-col a {
-    text-decoration: none;
-    color: black;
+  .Restaurants .rest-col .rest-detail .heart {
+    fill: url(#Gradient-2);
   }
-  .foot {
+  .Restaurants .rest-col .rest-detail .heart #Gradient-2 .stop-1 {
+    stop-color: #9356DC;
+  }
+  .Restaurants .rest-col .rest-detail .heart #Gradient-2 .stop-2 {
+    stop-color: #FF79DA;
+    stop-opacity: 0;
+  }
+  .Restaurants .rest-col .rest-detail .heart #Gradient-2 .stop-3 {
+    stop-color: #9356DC;
+  }
+  footer {
+    background-color: #363636;
     color: white;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    width: 89%;
-    padding: 20px;
+    font-family: "Roboto", sans-serif;
+    margin-top: 2%;
+    width: 100%;
+    width: 100%;
+    background-color: #363636;
   }
-  .top {
-    display: flex;
-    justify-content: center;
+  footer h2 {
+    color: white;
+    font-family: "Shrikhand", cursive;
+    padding: 1%;
+    font-weight: 300;
+    margin-left: 15px;
+    cursor: pointer;
   }
-  .top a {
+  footer ul {
+    list-style: none;
+    font-family: "Roboto", sans-serif;
+    padding-bottom: 2%;
+    padding-top: 1%;
+  }
+  footer ul li {
+    margin: 5px;
+  }
+  footer ul li a {
     text-decoration: none;
-    color: black;
-    align-self: center;
-    position: absolute;
-    left: 20px;
-    top: 20px;
+    color: white;
+    margin-top: 10px;
   }
-  .fa-arrow-left {
-    color: black;
-    font-size: x-large;
+  footer ul li a:hover {
+    color: wheat;
   }
-  .background {
-    display: flex;
-    flex-direction: column;
-    background-color: #f6f6f6;
+  footer ul i {
+    margin-right: 6px;
   }
-  #image {
-    width: 100%;
-  }
-  #image-2 {
-    width: 100%;
-    height: 250px;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .menu-title h3 {
-    margin-left: 20px;
-    font-weight: normal;
-  }
-  .background-image img {
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .restaurant-name {
-    display: flex;
-    flex-direction: column;
-    background-color: #f6f6f6;
-    border-radius: 30px;
-    position: relative;
-    top: -40px;
-  }
-  .restaurant-name h2 {
-    padding-left: 20px;
-  }
-  .nav-3 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    background-color: #f6f6f6;
-  }
-  .nav-3 h4 {
-    margin-top: 15px;
-  }
-  .nav-4 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    background-color: #f6f6f6;
-  }
-  .nav-4 h4 {
-    margin-top: 15px;
-  }
-  .nav-5 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    background-color: #f6f6f6;
-  }
-  .nav-5 h4 {
-    margin-top: 15px;
-  }
-  .food-1 {
+  .food-details {
     box-sizing: border-box;
     height: 100px;
-    padding-left: 12px;
+    width: 350px;
     border-radius: 15px;
     background-color: white;
     box-shadow: 0px 5px 10px #C0C0C0;
@@ -300,122 +293,46 @@ body {
     animation-iteration-count: 1;
     animation-name: loadAnimation;
   }
-  .food-1 h4 {
-    margin: 0px;
+  .food-details li span {
+    font-weight: lighter;
+    font-size: 0.8em;
   }
-  .food-1 .check > p > i {
-    display: none;
+  .food-details li:nth-child(1) {
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    flex: 1 1 auto;
+    min-width: 0;
+    font-size: large;
   }
-  .food-1 .check:hover {
+  .food-details li:nth-child(2) {
+    font-weight: bold;
+    width: 70px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+  }
+  .food-details li:nth-child(3) {
     width: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 0px;
     height: 100%;
+    color: transparent;
     background-color: #99e2d0;
     transition: all 0.1s;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
   }
-  .food-1 p:hover {
+  .food-details li:nth-child(3) i {
+    font-size: 1.5em;
+  }
+  .food-details:hover > li:nth-child(3) {
     max-width: 100px;
     color: white;
     border-radius: 0 15px 15px 0px;
   }
-  .food-1:hover > .check i {
-    display: block;
+  .food-details:hover > li:nth-child(3) i {
     animation: rotate 360;
     animation: spin 0.4s;
     transform: rotateZ(360deg);
     transition: 1s;
-  }
-  .food-2 {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 55px;
-    border-radius: 20px;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
-    padding-left: 12px;
-    padding-top: 18px;
-    line-height: 10px;
-  }
-  .food-2 h4 {
-    margin: 0px;
-  }
-  .food-2 li {
-    list-style: none;
-    align-self: flex-end;
-    position: relative;
-    left: -20px;
-    top: -25px;
-  }
-  .food-3 {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 55px;
-    border-radius: 20px;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
-    padding-left: 12px;
-    padding-top: 18px;
-    line-height: 10px;
-  }
-  .food-3 h4 {
-    margin: 0px;
-  }
-  .food-3 li {
-    list-style: none;
-    align-self: flex-end;
-    position: relative;
-    left: -20px;
-    top: -25px;
-  }
-  .food-4 {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 55px;
-    border-radius: 20px;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
-    padding-left: 12px;
-    padding-top: 18px;
-    line-height: 10px;
-  }
-  .food-4 h4 {
-    margin: 0px;
-  }
-  .food-4 li {
-    list-style: none;
-    align-self: flex-end;
-    position: relative;
-    left: -20px;
-    top: -25px;
-  }
-  .new {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70px;
-    margin-top: 4px;
-    margin-left: 250px;
-    margin-bottom: 0px;
-    color: white;
-    background-color: #99e2d0;
-    position: absolute;
-  }
-}
-@media screen and (min-width: 992px) {
-  footer {
-    width: 100%;
   }
 }/*# sourceMappingURL=main.css.map */
