font size change

--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -116,7 +116,7 @@ body {
         h2 {
             padding-left: 20px;
             font-family: Shrikhand;
-            font-size: xx-large;
+            font-size: x-large;
             margin-bottom: 0px;
             text-align: center;
         }
