--- a/styles/menu.css
+++ b/styles/menu.css
@@ -92,7 +92,7 @@ body {
 .background .restaurant-name h2 {
   padding-left: 20px;
   font-family: Shrikhand;
-  font-size: xx-large;
+  font-size: x-large;
   margin-bottom: 0px;
   text-align: center;
 }
