--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -316,6 +316,7 @@ footer {
 
             h2 {
                 text-align: left;
+                // font-size: x-large;
             }
 
         }
