--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -7,11 +7,6 @@ body {
     color: black;
     font-family: Roboto;
     margin: 0;
-    // animation-duration: 1s;
-    // animation-timing-function: ease-in-out;
-    // animation-delay: 0s;
-    // animation-iteration-count: 1;
-    // animation-name: loadAnimation;
 }
 
 @keyframes rotate {
@@ -28,6 +23,16 @@ body {
     to {
         z-index: -1;
         opacity: 0;
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0turn);
+    }
+
+    to {
+        transform: rotate(1turn);
     }
 }
 
@@ -75,8 +80,6 @@ body {
 .background {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-    // height: 200px;
     background-color: #f6f6f6;
     animation-duration: 2s;
     animation-timing-function: ease-in;
@@ -205,17 +208,12 @@ body {
     cursor: pointer;
     list-style: none;
     font-family: $font-text;
-    margin-bottom: 2%;
+    margin-bottom: 2%;  
     animation-duration: 2s;
     animation-timing-function: ease-in;
     animation-delay: 0s;
     animation-iteration-count: 1;
     animation-name: loadAnimation;
-    // animation-duration: 1s;
-    // animation-timing-function: ease-in-out;
-    // animation-delay: 0s;
-    // animation-iteration-count: 1;
-    // animation-name: loadAnimation;
 
     li {
 
@@ -248,7 +246,6 @@ body {
             max-width: 0px;
             height: 100%;
             color: transparent;
-            background-color: $green;
             -webkit-transition: all 0.1s;
             transition: all 0.1s;
 
@@ -263,6 +260,7 @@ body {
             max-width: 100px;
             color: white;
             border-radius: 0 15px 15px 0px;
+            background-color: $green;
 
             i {
                 animation: rotate 360;
@@ -288,7 +286,6 @@ footer {
     animation-delay: 0s;
     animation-iteration-count: 1;
     animation-name: loadAnimation;
-    // animation-fill-mode: none;
 }
 
 @media screen and (max-width: 992px) and (min-width: 768px) {
@@ -316,7 +313,6 @@ footer {
 
             h2 {
                 text-align: left;
-                // font-size: x-large;
             }
 
         }
