--- a/styles/menu.css
+++ b/styles/menu.css
@@ -95,7 +95,7 @@ body {
   background-color: #f6f6f6;
   border-radius: 30px;
   position: relative;
-  top: -40px;
+  top: -30px;
 }
 .background .restaurant-name h2 {
   padding-left: 20px;
@@ -143,7 +143,7 @@ body {
   width: 90%;
 }
 .background .nav-3 .food-card {
-  width: 100%;
+  width: 95%;
 }
 .background .purple-2 {
   color: white;
@@ -191,8 +191,11 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   flex: 1 1 auto;
-  min-width: 0;
+  min-width: 1px;
   font-size: large;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .food-details li:nth-child(2) {
   font-weight: bold;
@@ -221,7 +224,7 @@ body {
 }
 .food-details:hover > li:nth-child(3) i {
   animation: rotate 360;
-  animation: spin 0.4s;
+  animation: spin 1s;
   transform: rotateZ(360deg);
   transition: 1.5s;
 }
@@ -265,6 +268,7 @@ footer {
     margin-left: 85px;
   }
   .food-details {
-    width: 350px;
+    width: 100%;
+    margin-left: 6px;
   }
 }/*# sourceMappingURL=menu.css.map */
