--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -175,7 +175,7 @@ body {
         }
     }
 
-    form {
+    #button-2 {
         align-self: center;
 
         .purple-2 {
@@ -296,11 +296,11 @@ footer {
 }
 
 @media screen and (max-width: 992px) and (min-width: 768px) {
-    .background {
-        .purple-2 {
-            margin-left: 310px;
-        }
-    }
+    // .background {
+    //     .purple-2 {
+    //         margin-left: 310px;
+    //     }
+    // }
 }
 
 @media (max-width: 768px) {
